Contact schema added to createContact method
